arranged file with index.html

--- a/Quiz/html/cprog.html
+++ b/Quiz/html/cprog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="cs.css">
+  <link rel="stylesheet" href="../css/c.css">
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,12 +12,12 @@
   <link rel="stylesheet" 
    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-  <title>COMPUTER SCIENCE</title>
+  <title>C-programming</title>
 </head>
 <body>
     <nav class="nav-wrapper transparent">
         <div class="container">
-            <a href="quiz.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
+            <a href="./index.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
             <ul class="right">
               <li><a href="#" class="btn-floating pulse white tooltipped" 
                 data-position="left" data-tooltip="User Account"><i class="material-icons green-text">account_circle</i></a></li>
@@ -31,12 +31,12 @@
     </nav>
     
     <div class="container section">
-        <h2 class="white-text center">COMPUTER SCIENCE QUIZ </h2>
-        <div class="progress purple">
+        <h2 class="white-text center">C-Programming </h2>
+        <div class="progress green">
           <div class="indeterminate"></div>
         </div>
         <div class="center-align">
-                <a class="waves-effect waves-green btn-large black-text white modal-trigger " 
+                <a class="waves-effect waves-green btn-large black-text white modal-trigger" 
                 href="#start"><b> Let's Begin</b></a>
         </div>
         <!-- Modal Structure -->
@@ -50,7 +50,7 @@
           <h6 class="center">IF YOU FOLLOW ALL THESE RULES THEN YOU ARE READY TO START YOUR QUIZ.</h6>
         </div>
         <div class="modal-footer">
-          <a href="csquiz.html" class="modal-close waves-effect waves-green btn-flat"><b> START QUIZ </b></a>
+          <a href="cproggame.html" class="modal-close waves-effect waves-green btn-flat"><b> START QUIZ </b></a>
         </div>
         </div>
     </div>
@@ -59,6 +59,7 @@
           &COPY;2021 Copyright QUIZ    
       </div>
   </footer>
+
 
 <!--Compiled and minified Jquery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
