--- a/Quiz/html/cproggame.html
+++ b/Quiz/html/cproggame.html
@@ -11,8 +11,8 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" 
    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="c.css">
-    <link rel="stylesheet" href="csquiz.css">
+    <link rel="stylesheet" href="../css/c.css">
+    <link rel="stylesheet" href="../css/csquiz.css">
 </head>
 <body >
     <div class="quiz_box ">
@@ -50,12 +50,12 @@
         <!-- <span>You got <p>2</p> out of <p>10</p></span> -->
     </div>
     <div class="buttons">
-        <a href="cs.html#start"><button class="restart btn blue darken-2">Replay Quiz</button></a>
-        <a href="quiz.html"><button class="quit btn red darken-4">Quit quiz</button></a>
+        <a href="../cs.html#start"><button class="restart btn blue darken-2">Replay Quiz</button></a>
+        <a href="../index.html"><button class="quit btn red darken-4">Quit quiz</button></a>
     </div>
 </div>
-<script src="./js/cquestions.js"></script>
-<script src="./js/game.js"></script>
-<script src="./js/userinfo.js"></script>
+<script src="../js/cquestions.js"></script>
+<script src="../js/game.js"></script>
+<script src="../js/userinfo.js"></script>
 </body>
 </html>
