--- a/Quiz/html/math.html
+++ b/Quiz/html/math.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="c.css">
+  <link rel="stylesheet" href="../css/math.css">
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,14 +12,14 @@
   <link rel="stylesheet" 
    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-  <title>C-programming</title>
+  <title>MATH</title>
 </head>
 <body>
     <nav class="nav-wrapper transparent">
         <div class="container">
-            <a href="quiz.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
+            <a href="index.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
             <ul class="right">
-              <li><a href="#" class="btn-floating pulse white tooltipped" 
+            <li><a href="#" class="btn-floating pulse white tooltipped" 
                 data-position="left" data-tooltip="User Account"><i class="material-icons green-text">account_circle</i></a></li>
             <li><a href="#" class="btn-floating pulse white tooltipped" 
                 data-position="bottom" data-tooltip="Leaderboard"><i class="material-icons red-text">leaderboard</i></a></li>
@@ -31,8 +31,8 @@
     </nav>
     
     <div class="container section">
-        <h2 class="white-text center">C-Programming </h2>
-        <div class="progress green">
+        <h2 class="white-text center">MATH QUIZ </h2>
+        <div class="progress red">
           <div class="indeterminate"></div>
         </div>
         <div class="center-align">
@@ -50,7 +50,7 @@
           <h6 class="center">IF YOU FOLLOW ALL THESE RULES THEN YOU ARE READY TO START YOUR QUIZ.</h6>
         </div>
         <div class="modal-footer">
-          <a href="cproggame.html" class="modal-close waves-effect waves-green btn-flat"><b> START QUIZ </b></a>
+          <a href="mathgame.html" class="modal-close waves-effect waves-green btn-flat"><b> START QUIZ </b></a>
         </div>
         </div>
     </div>
@@ -59,7 +59,6 @@
           &COPY;2021 Copyright QUIZ    
       </div>
   </footer>
-
 
 <!--Compiled and minified Jquery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
