--- a/Quiz/html/mathgame.html
+++ b/Quiz/html/mathgame.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHYSICS</title>
+    <title>MATHS</title>
       <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" 
    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="phy.css">
-    <link rel="stylesheet" href="csquiz.css">
+    <link rel="stylesheet" href="../css/math.css">
+    <link rel="stylesheet" href="../css/csquiz.css">
 </head>
 <body >
     <div class="quiz_box ">
         <header>
-            <div class="title blue-text">Physics</div>
+            <div class="title blue-text">Maths</div>
             <div class="timer">
                 <div class="time_text">Time Left</div>
                 <div class="timer_sec">20</div>
@@ -29,7 +29,7 @@
                 <!-- <h5>Question Comes Here</h5> -->
             </div>
             <div class="option_list">
-                
+               
             </div>
         </section>
         <footer>
@@ -51,11 +51,11 @@
     </div>
     <div class="buttons">
         <a href="cs.html#start"><button class="restart btn blue darken-2">Replay Quiz</button></a>
-        <a href="quiz.html"><button class="quit btn red darken-4">Quit quiz</button></a>
+        <a href="index.html"><button class="quit btn red darken-4">Quit quiz</button></a>
     </div>
 </div>
-<script src="./js/physquestions.js"></script>
-<script src="./js/game.js"></script>
-<script src="./js/userinfo.js"></script>
+<script src="../js/mathquestions.js"></script>
+<script src="../js/game.js"></script>
+<script src="../js/userinfo.js"></script>
 </body>
 </html>
