--- a/Quiz/html/physics.html
+++ b/Quiz/html/physics.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="phy.css">
+  <link rel="stylesheet" href="../css/phy.css">
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
     <nav class="nav-wrapper transparent">
         <div class="container">
-            <a href="quiz.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
+            <a href="index.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
             <ul class="right">
               <li><a href="#" class="btn-floating pulse white tooltipped" 
                 data-position="left" data-tooltip="User Account"><i class="material-icons green-text">account_circle</i></a></li>
