--- a/Quiz/html/csquiz.html
+++ b/Quiz/html/csquiz.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MATHS</title>
+    <title>COMPUTER SCIENCE</title>
       <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" 
    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="math.css">
-    <link rel="stylesheet" href="csquiz.css">
+    <link rel="stylesheet" href="../css/cs.css">
+    <link rel="stylesheet" href="../css/csquiz.css">
 </head>
 <body >
     <div class="quiz_box ">
         <header>
-            <div class="title blue-text">Maths</div>
+            <div class="title blue-text">Computer Science</div>
             <div class="timer">
                 <div class="time_text">Time Left</div>
                 <div class="timer_sec">20</div>
@@ -29,7 +29,20 @@
                 <!-- <h5>Question Comes Here</h5> -->
             </div>
             <div class="option_list">
-               
+                <!-- <div class="option">
+                    <span>Answer</span>
+                    <div class="icon tick"><i class="far fa-check-circle"></i></div>
+                </div>
+                <div class="option">
+                    <span>Answer</span>
+                    <div class="icon cross"><i class="far fa-times-circle"></i></div>
+                </div>
+                <div class="option">
+                    <span>Answer</span>
+                </div>
+                <div class="option">
+                    <span>Answer</span>
+                </div> -->
             </div>
         </section>
         <footer>
@@ -41,21 +54,24 @@
     </div>
 <!-- Result -->
 <div class="result_box ended">
+    <div class="result_box_ended_content">
     <div class="icon">
         <i class="fas fa-crown"></i>
     </div>
     <div class="complete_text">Well Done! <br>
-        <h3 class="username"><span class="name" style="font-size:50px; color: rgb(6, 10, 0);"></span><br></h3> </div>
+        <h3 class="username"><span class="name" style="font-size:50px; color: rgb(6, 10, 0);"></span><br></h3></div>
     <div class="score_text">
         <!-- <span>You got <p>2</p> out of <p>10</p></span> -->
     </div>
     <div class="buttons">
         <a href="cs.html#start"><button class="restart btn blue darken-2">Replay Quiz</button></a>
-        <a href="quiz.html"><button class="quit btn red darken-4">Quit quiz</button></a>
+        <a href="index.html"><button class="quit btn red darken-4">Quit quiz</button></a>
     </div>
 </div>
-<script src="./js/mathquestions.js"></script>
-<script src="./js/game.js"></script>
-<script src="./js/userinfo.js"></script>
+</div>
+<script src="../js/questions.js"></script>
+<script src="../js/game.js"></script>
+<script src="../js/userinfo.js"></script>
+
 </body>
 </html>
