--- a/Quiz/html/index.html
+++ b/Quiz/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
     <nav class="nav-wrapper transparent">
         <div class="container">
-            <a href="quiz.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
+            <a href="index.html" class="brand-logo"><i class="material-icons">school</i> QUIZ</a>
             <ul class="right">
                 <li><a href="#" class="btn-floating pulse white tooltipped" 
                     data-position="left" data-tooltip="User Account"><i class="material-icons green-text">account_circle</i></a></li>
